<p>&copy; 2026/2027 Cresco Water. All rights reserved.</p>

--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
                 <p>Pure, affordable refills every day</p>
             </div>
             <div class="footer-section">
-                <p>&copy; 2026 Cresco Water. All rights reserved.</p>
+                <p>&copy; 2026/2027 Cresco Water. All rights reserved.</p>
             </div>
         </div>
     </footer>
@@ -387,3 +387,4 @@
 
 
 </html>
+
